--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,29 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/h2TestDB/empDB
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
 
-# Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
+spring.datasource.username=shopuser
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopdb?useUnicode=true&characterEncoding=UTF-8
 
-#Show all queries
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate=trace
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.sql.init.mode=always
+
+spring.flyway.user=shopadmin
+spring.flyway.password=password
+
 spring.jpa.properties.hibernate.connection.isolation=2
 
-# Performance
-spring.jpa.properties.hibernate.jdbc.batch_size=10
+#Show SQL
+spring.jpa.properties.hibernate.show_sql=true
 
-spring.data.jpa.repositories.bootstrap-mode=default
+#Format SQL
+spring.jpa.properties.hibernate.format_sql=true
 
-# What data to cache?
-spring.jpa.defer-datasource-initialization=true
+#Show bind values
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.defer-datasource-initialization=false
