--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,19 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
-
 spring.datasource.username=shopuser
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopdb?useUnicode=true&characterEncoding=UTF-8
-
 spring.jpa.hibernate.ddl-auto=validate
-
 spring.sql.init.mode=always
-
 spring.flyway.user=shopadmin
 spring.flyway.password=password
-
 spring.jpa.properties.hibernate.connection.isolation=2
-
 #Show SQL
 spring.jpa.properties.hibernate.show_sql=true
-
 #Format SQL
-spring.jpa.properties.hibernate.format_sql=true
-
+#spring.jpa.properties.hibernate.format_sql=true
 #Show bind values
 logging.level.org.hibernate.type.descriptor.sql=trace
-
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
